# python-project

./: .dockerignore  .gitignore  Makefile  README.md  manage.py  pyproject.toml
note_cli/: config.py  crud.py  database.py  display.py  encryption.py  main.py
src/app/: __init__.py  admin.py  config.py  models.py
src/app/auth/: __init__.py  forms.py  views.py
src/app/main/: views.py
src/app/static/css/: style.css
src/app/templates/: base.html
src/app/templates/auth/: login.html  register.html
src/app/templates/main/: index.html  product_details.html  products.html
src/python_project/: config.py  database.py  logic.py  main.py
tests/: test_cli.py
