[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "note-cli"
version = "0.2.0"
description = "A comprehensive, encrypted, command-line note-taking application with versioning."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "typer[all]",
    "SQLAlchemy",
    "rich",
    "cryptography",
    "pydantic",
]

[project.scripts]
note = "note_cli.main:app"

[project.optional-dependencies]
dev = ["pytest"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double" 